--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -1,49 +1,49 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .bullet {
-    list-style: none;
-    line-height: 1.54em;
-    padding-inline-start: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-end: 0;
-    list-style-position: inside;
+  list-style: none;
+  line-height: 1.54em;
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-end: 0;
+  list-style-position: inside;
 
-    & li {
-        position: relative;
-        padding-left: 19px;
-        padding-bottom: 14px;
+  & li {
+    position: relative;
+    padding-left: 19px;
+    padding-bottom: 14px;
 
-        &.bullet--small {
-            padding-bottom: 3px;
-            padding-left: 14px;
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 5px;
-            left: -1px;
-            width: 10px;
-            height: 10px;
-            background-color: $dark-shade-25;
-            border-radius: 50%;
-        }
+    &.bullet--small {
+      padding-bottom: 3px;
+      padding-left: 14px;
     }
 
-    &--excellent::before {
-        background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
+    &::before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      left: -1px;
+      width: 10px;
+      height: 10px;
+      background-color: $dark-shade-25;
+      border-radius: 50%;
     }
+  }
 
-    &--good::before {
-        background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-    }
+  &--excellent::before {
+    background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+  }
 
-    &--normal::before {
-        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-    }
+  &--good::before {
+    background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+  }
 
-    &--bad::before {
-        background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
-    }
+  &--normal::before {
+    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+  }
+
+  &--bad::before {
+    background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+  }
 }
