--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -1,41 +1,41 @@
-@import '../../../node_modules/ion-rangeslider/css/ion.rangeslider.css';
-@import '../../scss/colors.scss';
+@import "../../../node_modules/ion-rangeslider/css/ion.rangeslider.css";
+@import "../../scss/colors.scss";
 
 .irs--flat .irs-min,
 .irs--flat .irs-max {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .irs--flat .irs-handle > i:first-child {
-    width: 16px;
-    height: 16px;
-    top: -2px;
-    color: red;
-    border-radius: 50%;
-    border: 2px solid white;
-    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+  width: 16px;
+  height: 16px;
+  top: -2px;
+  color: red;
+  border-radius: 50%;
+  border: 2px solid white;
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 }
 
 .irs--flat .irs-line {
-    height: 6px;
-    border: 1px solid rgba(31, 32, 65, 0.25);
-    border-radius: 3px;
-    background: white;
+  height: 6px;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  border-radius: 3px;
+  background: white;
 }
 
 .irs--flat .irs-bar {
-    height: 6px;
-    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-    border-radius: 3px;
+  height: 6px;
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+  border-radius: 3px;
 }
 
 .slider__min-max {
-    font-family: Montserrat;
-    position: relative;
-    top: -20px;
-    font-size: 12px;
-    line-height: 15px;
-    text-transform: uppercase;
-    text-align: right;
-    color: $dark-shade-50;
+  font-family: Montserrat, Arial, sans-serif;
+  position: relative;
+  top: -20px;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  text-align: right;
+  color: $dark-shade-50;
 }
