--- a/src/blocks/socials/socials.scss
+++ b/src/blocks/socials/socials.scss
@@ -1,30 +1,30 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .socials {
-    display: flex;
+  display: flex;
 
-    &__button {
-        border: none;
-        font-family: 'Font Awesome';
-        width: 28px;
-        height: 24px;
-        font-size: 24px;
-        cursor: pointer;
-        margin: 0 8px;
-        background: $gradient;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+  &__button {
+    border: none;
+    font-family: "Font Awesome";
+    width: 28px;
+    height: 24px;
+    font-size: 24px;
+    cursor: pointer;
+    margin: 0 8px;
+    background: $gradient;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 
-        &--twitter::before {
-            content: '\f099';
-        }
-
-        &--fb::before {
-            content: '\f082';
-        }
-
-        &--instagram::before {
-            content: '\f16d';
-        }
+    &--twitter::before {
+      content: "\f099";
     }
+
+    &--fb::before {
+      content: "\f082";
+    }
+
+    &--instagram::before {
+      content: "\f16d";
+    }
+  }
 }
