--- a/src/blocks/type/type.scss
+++ b/src/blocks/type/type.scss
@@ -1,34 +1,32 @@
-@import '../../scss/common.scss';
+@import "../../scss/common.scss";
 
 .type {
-    display: flex;
+  display: flex;
 
-    &__head {
-        display: inline-block;
-        color: $dark-shade-25;
-        text-align: right;
-        flex-basis: 60px;
-        flex-shrink: 0;
+  &__head {
+    display: inline-block;
+    color: $dark-shade-25;
+    text-align: right;
+    flex-basis: 60px;
+    flex-shrink: 0;
 
-        &--big {
-            font-size: 1.5rem;
-            line-height: 1.2em;
-        }
-
-        &--middle {
-            font-size: 1.1875rem;
-            line-height: 1.21em;
-        }
-
-        &--small {
-            font-size: .75rem;
-            line-height: .8em;
-        }
+    &--big {
+      font-size: 1.5rem;
+      line-height: 1.2em;
     }
 
-    &__body {
-        padding-left: 30px;
+    &--middle {
+      font-size: 1.1875rem;
+      line-height: 1.21em;
     }
 
+    &--small {
+      font-size: 0.75rem;
+      line-height: 0.8em;
+    }
+  }
+
+  &__body {
+    padding-left: 30px;
+  }
 }
-
