--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -1,62 +1,62 @@
-@import '../../scss/sizes.scss';
-@import '../../scss/colors.scss';
+@import "../../scss/sizes.scss";
+@import "../../scss/colors.scss";
 
 .search-room {
+  display: grid;
+  max-width: 1160px;
+  margin: 30px auto 0;
+  gap: 1em;
+  justify-items: center;
+
+  @media screen and (min-width: $middle-size) {
+    grid-template-columns: 1fr 3fr;
+    justify-items: stretch;
+  }
+
+  &__header {
+    grid-column: 1/-1;
+  }
+
+  &__pagination {
+    grid-column: 1/-1;
+    justify-self: center;
+  }
+
+  &__sidebar {
+    min-width: 266px;
+  }
+
+  &__sidebar-item-title {
+    margin-bottom: 16px;
+    color: $dark-shade-100;
+  }
+
+  &__sidebar-item {
+    margin-bottom: 30px;
+  }
+
+  &__content {
     display: grid;
-    max-width: 1160px;
-    margin: 30px auto 0;
-    gap: 1em;
-    justify-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(272px, 1fr));
+    row-gap: 2em;
+    column-gap: 1em;
+  }
 
-    @media screen and (min-width: $middle-size) {
-        grid-template-columns: 1fr 3fr;
-        justify-items: stretch;
-    }
+  &__room-card {
+    justify-self: center;
+  }
 
-    &__header {
-        grid-column: 1/-1;
-    }
+  &__slider {
+    position: relative;
+    top: -16px;
+    font-size: 12px;
+    color: $dark-shade-50;
+    font-family: Montserrat;
+    line-height: 24px;
+  }
 
-    &__pagination {
-        grid-column: 1/-1;
-        justify-self: center;
-    }
-    
-    &__sidebar {
-        min-width: 266px;
-    }
-
-    &__sidebar-item-title {
-        margin-bottom: 16px;
-        color: $dark-shade-100;
-    }
-
-    &__sidebar-item {
-        margin-bottom: 30px;
-    }
-
-    &__content {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(272px, 1fr));
-        row-gap: 2em;
-        column-gap: 1em;
-    }
-
-    &__room-card {
-        justify-self: center;
-    }
-
-    &__slider {
-        position: relative;
-        top: -16px;
-        font-size: 12px;
-        color: $dark-shade-50;
-        font-family: Montserrat;
-        line-height: 24px;
-    }
-
-    &--index-100 {
-        position: relative;
-        z-index: 100;
-    }
+  &--index-100 {
+    position: relative;
+    z-index: 100;
+  }
 }
