--- a/src/blocks/apartment-info/apartment-info.scss
+++ b/src/blocks/apartment-info/apartment-info.scss
@@ -1,21 +1,20 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .apartment-info {
+  &--main {
+    display: inline;
+  }
 
-    &--main {
-        display: inline;
-    }
+  &--lux {
+    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-size: 12px;
+    color: $purple;
+    text-transform: uppercase;
+    padding-left: 1px;
+  }
 
-    &--lux {
-        font-family: 'Montserrat Bold';
-        font-size: 12px;
-        color: $purple;
-        text-transform: uppercase;
-        padding-left: 1px;
-    }
-
-    &--bold {
-        font-family: 'Quicksand Bold', sans-serif;
-        font-weight: bold;
-    }
+  &--bold {
+    font-family: "Quicksand Bold", Arial, sans-serif;
+    font-weight: bold;
+  }
 }
