--- a/src/blocks/avatar/avatar.scss
+++ b/src/blocks/avatar/avatar.scss
@@ -1,9 +1,9 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .avatar {
-    width: 48px;
-    height: 48px;
-    border: 2px solid $white;
-    border-radius: 50%;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.1);
+  width: 48px;
+  height: 48px;
+  border: 2px solid $white;
+  border-radius: 50%;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.1);
 }
