--- a/src/blocks/card-canvas/card-canvas.scss
+++ b/src/blocks/card-canvas/card-canvas.scss
@@ -1,11 +1,11 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .card-canvas {
-    display: block;
-    width: 100%;
-    padding: 40px 30px 30px;
-    background-color: $white;
-    border-radius: 4px;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+  display: block;
+  width: 100%;
+  padding: 40px 30px 30px;
+  background-color: $white;
+  border-radius: 4px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
