--- a/src/blocks/card-footer/card-footer.scss
+++ b/src/blocks/card-footer/card-footer.scss
@@ -1,12 +1,12 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .card-footer {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: baseline;
-    line-height: 18px;
-    color: $black;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: baseline;
+  line-height: 18px;
+  color: $black;
 }
