--- a/src/blocks/color-types/color-types.scss
+++ b/src/blocks/color-types/color-types.scss
@@ -1,42 +1,38 @@
-@import '../../scss/sizes.scss';
+@import "../../scss/sizes.scss";
 
 .color-types {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  margin: 144px auto;
+
+  &__pallete {
+    margin: 0 auto;
+  }
+
+  &__types {
     display: flex;
     flex-direction: column;
-    justify-items: center;
-    margin: 144px auto;
+    justify-content: space-between;
+    max-width: 500px;
+    height: 306px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: $small-size) {
+  .color-types {
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 1160px;
 
     &__pallete {
-        margin: 0 auto;
+      padding: 0 56px;
+      margin: 0;
     }
 
     &__types {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        max-width: 500px;
-        height: 306px;
-        margin: 0 auto;
+      margin: 0;
     }
-}
-
-
-
-@media screen and (min-width: $small-size) {
-    .color-types {
-        flex-direction: row;
-        justify-content: space-between;
-        max-width: 1160px;
-
-        &__pallete {
-            padding: 0 56px;
-            margin: 0;
-        }
-
-        &__types {
-            margin: 0;
-        }
-    }
-
-    
+  }
 }
