--- a/src/blocks/expander/expander.scss
+++ b/src/blocks/expander/expander.scss
@@ -1,41 +1,40 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .expander {
+  &__header {
+    text-transform: uppercase;
+    font-family: "Montserrat Bold", Arial, sans-serif;
+    font-size: 0.75rem;
+    padding-bottom: 16px;
+    color: $dark-shade-100;
+    cursor: pointer;
+    user-select: none;
 
-    &__header {
-        text-transform: uppercase;
-        font-family: 'Montserrat Bold', Arial;
-        font-size: .75rem;
-        padding-bottom: 16px;
-        color: $dark-shade-100;
-        cursor: pointer;
-        user-select: none;
-
-        &::after {
-            content: '';
-            display: inline-block;
-            position: relative;
-            top: -3px;
-            margin-left: 48px;
-            width: 8px;
-            height: 8px;
-            border-color: $dark-shade-50;
-            border-style: solid;
-            border-width: 0 0 2px 2px;
-            transform: rotate(-45deg);
-        }
-
-        &--open::after {
-            transform: rotate(135deg);
-            top: 3px;
-        }
+    &::after {
+      content: "";
+      display: inline-block;
+      position: relative;
+      top: -3px;
+      margin-left: 48px;
+      width: 8px;
+      height: 8px;
+      border-color: $dark-shade-50;
+      border-style: solid;
+      border-width: 0 0 2px 2px;
+      transform: rotate(-45deg);
     }
 
-    &__list {
-        display: block;
-
-        &--hide {
-            display: none;
-        }
+    &--open::after {
+      transform: rotate(135deg);
+      top: 3px;
     }
+  }
+
+  &__list {
+    display: block;
+
+    &--hide {
+      display: none;
+    }
+  }
 }
