--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,49 +1,48 @@
-@import '../../scss/colors.scss';
-@import '../../scss/sizes.scss';
+@import "../../scss/colors.scss";
+@import "../../scss/sizes.scss";
 
 .footer {
-    width: 100%;
-    height: 442px;
-    background-color: $white;
-    line-height: 24px;
-    padding-top: 100px;
+  width: 100%;
+  height: 442px;
+  background-color: $white;
+  line-height: 24px;
+  padding-top: 100px;
 
-    &__container {
-        display: flex;
-        justify-content: space-between;
-        max-width: 1160px;
-        margin: 0 auto 84px;
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1160px;
+    margin: 0 auto 84px;
+  }
+
+  &__block {
+    width: 260px;
+
+    &__header {
+      margin-bottom: 26px;
     }
+  }
 
-    &__block {
-        width: 260px;
+  &__nav {
+    width: 160px;
+  }
 
-        &__header {
-            margin-bottom: 26px;
-        }
-    }
+  &__link {
+    display: block;
+    margin: 20px 0;
+    line-height: 17px;
+  }
 
-    &__nav {
-        width: 160px;
-    }
+  &__bottom {
+    border-top: 1px solid $dark-shade-25;
+  }
 
-    &__link {
-        display: block;
-        margin: 20px 0;
-        line-height: 17px;
-    }
-
-    &__bottom {
-        border-top: 1px solid $dark-shade-25;
-    }
-
-    &__copy {
-        display: flex;
-        justify-content: space-between;
-        max-width: 1160px;
-        margin: 0 auto;
-        align-items: baseline;
-        padding: 10px 0;
-    }
-    
+  &__copy {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1160px;
+    margin: 0 auto;
+    align-items: baseline;
+    padding: 10px 0;
+  }
 }
