--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,76 +1,67 @@
-@import '../../scss/colors.scss';
-@import '../../scss/sizes.scss';
+@import "../../scss/colors.scss";
+@import "../../scss/sizes.scss";
 
 .header {
-    width: 100%;
-    position: relative;
-    box-shadow: 0px 10px 20px $dark-shade-5;
+  width: 100%;
+  position: relative;
+  box-shadow: 0px 10px 20px $dark-shade-5;
 
-    &__container {
-        display: flex;
-        align-items: center;
-        height: 100%;
-        margin: auto 0;
-    }
+  &__container {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    margin: auto 0;
+  }
 
-    &__logo {
-        margin-right: auto;
-    }
+  &__logo {
+    margin-right: auto;
+  }
 
-    &__menu {
-        position: absolute;
-        top: 44px;
-        left: 10px;
-        right: 10px;
-    }
+  &__menu {
+    position: absolute;
+    top: 44px;
+    left: 10px;
+    right: 10px;
+  }
 
-    &__enter-panel {
-        display: flex;
-        justify-content: space-between;
-    }
+  &__enter-panel {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    &__enter-button {
-        margin-right: 20px;
-    }
+  &__enter-button {
+    margin-right: 20px;
+  }
 
-    &__toggle {
-        
-    }
-
-    &__account {
-        margin: 0 auto;
-    }
-    
+  &__account {
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: $small-size) {
-    .header {
-        height: 70px;
+  .header {
+    height: 70px;
 
-        &__container {
-            flex-direction: row;
-            max-width: 1160px;
-            margin: 0 auto;
-        }
-
-        &__menu {
-            position: static;
-            width: auto;
-            padding-right: 14px;
-        }
-
-        &__enter-panel {
-
-        }
-
-        &__account {
-            border-left: 1px solid $dark-shade-10;
-            color: $dark-shade-50;
-            padding: 8px 0 4px 30px;
-        }
-
-        &__toggle {
-            display: none;
-        }
+    &__container {
+      flex-direction: row;
+      max-width: 1160px;
+      margin: 0 auto;
     }
+
+    &__menu {
+      position: static;
+      width: auto;
+      padding-right: 14px;
+    }
+
+    &__account {
+      border-left: 1px solid $dark-shade-10;
+      color: $dark-shade-50;
+      padding: 8px 0 4px 30px;
+    }
+
+    &__toggle {
+      display: none;
+    }
+  }
 }
