--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -1,38 +1,36 @@
-@import '../../scss/sizes.scss';
+@import "../../scss/sizes.scss";
 
 .hero {
-    position: relative;
-    background-image: url('../img/image_3.png');
-    width: 100%;
-    min-height: 200px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  position: relative;
+  background-image: url("../img/image_3.png");
+  width: 100%;
+  min-height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    &--img2 {
-        background-image: url('../img/image_4.png');
-    }
+  &--img2 {
+    background-image: url("../img/image_4.png");
+  }
 
-    &__text {
-        position: absolute;
-        width: 297px;
-        height: 48px;
-        text-align: center;
-        bottom: 70%;
-        right: 20%;
-    }
+  &__text {
+    position: absolute;
+    width: 297px;
+    height: 48px;
+    text-align: center;
+    bottom: 70%;
+    right: 20%;
+  }
 }
 
 @media screen and (min-width: $small-size) {
+  .hero {
+    min-height: 900px;
 
-    .hero {
-        min-height: 900px;
-
-        &__text {
-            text-align: right;
-            bottom: 18px;
-            right: 70px;
-        }
+    &__text {
+      text-align: right;
+      bottom: 18px;
+      right: 70px;
     }
-    
+  }
 }
