--- a/src/blocks/light-footer/light-footer.scss
+++ b/src/blocks/light-footer/light-footer.scss
@@ -1,17 +1,17 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .light-footer {
-    width: 100%;
-    background-color: $white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 100px 0 110px;
-    
-    &__content {
-        padding: 16px 0 25px;
-        text-align: center;
-        line-height: 24px;
-        max-width: 560px;
-    }
+  width: 100%;
+  background-color: $white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0 110px;
+
+  &__content {
+    padding: 16px 0 25px;
+    text-align: center;
+    line-height: 24px;
+    max-width: 560px;
+  }
 }
