--- a/src/blocks/long-button/long-button.scss
+++ b/src/blocks/long-button/long-button.scss
@@ -1,31 +1,32 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .long-button {
-    position: relative;
-    display: inline-block;
-    color: $white;
-    background-image: $gradient;
-    border: none;
-    border-radius: 22px;
-    padding: 16px 18px;
-    text-transform: uppercase;
-    font-size: .75rem;
-    font-weight: bold;
-    cursor: pointer;
-    user-select: none;
-    width: 100%;
-    text-align: center;
+  position: relative;
+  display: inline-block;
+  font-family: Montserrat, Arial, sans-serif;
+  color: $white;
+  background-image: $gradient;
+  border: none;
+  border-radius: 22px;
+  padding: 16px 18px;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  width: 100%;
+  text-align: center;
 
-    &__icon {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        font-family: 'Material Icons';
-        font-weight: normal;
-        font-style: normal;
-        font-size: 24px; 
-        display: inline-block;
-        line-height: 1;
-        text-transform: none;
-    }
+  &__icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+  }
 }
