--- a/src/blocks/menu-toggle/menu-toggle.scss
+++ b/src/blocks/menu-toggle/menu-toggle.scss
@@ -1,18 +1,17 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .menu-toggle {
-    border: none;
-    background-color: transparent;
+  border: none;
+  background-color: transparent;
+  display: block;
+  cursor: pointer;
+
+  &:after {
+    content: "\2261";
+    color: $dark-shade-50;
     display: block;
-    cursor: pointer;
-
-    &:after {
-        content: '\2261';
-        color: $dark-shade-50;
-        display: block;
-        font-size: 40px;
-        width: 40px;
-        height: 40px;
-    }
+    font-size: 40px;
+    width: 40px;
+    height: 40px;
+  }
 }
-
