--- a/src/blocks/simple-button/simple-button.scss
+++ b/src/blocks/simple-button/simple-button.scss
@@ -1,15 +1,15 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 .simple-button {
-    display: inline-block;
-    font-size: .75rem;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: $purple;
-    cursor: pointer;
+  display: inline-block;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: $purple;
+  cursor: pointer;
 
-    &--disabled {
-        cursor: default;
-        color: $dark-shade-50;
-    }
+  &--disabled {
+    cursor: default;
+    color: $dark-shade-50;
+  }
 }
