--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,26 +1,25 @@
-@import '../../scss/colors.scss';
+@import "../../scss/colors.scss";
 
 body {
-    background-color: $gray;
+  background-color: $gray;
 }
 
 .headers-footers {
-    margin: 150px auto;
+  margin: 150px auto;
 
-    &__item {
-        position: relative;
-        z-index: 2;
-        background-color: $white;
-        box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-        margin-bottom: 40px;
+  &__item {
+    position: relative;
+    z-index: 2;
+    background-color: $white;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    margin-bottom: 40px;
 
-        &--up {
-            z-index: 3;
-        }
-
-        &--down {
-            z-index: 1;
-        }
+    &--up {
+      z-index: 3;
     }
-    
+
+    &--down {
+      z-index: 1;
+    }
+  }
 }
