--- a/src/pages/landing-layout/landing-layout.scss
+++ b/src/pages/landing-layout/landing-layout.scss
@@ -1,22 +1,21 @@
-@import '../../scss/sizes.scss';
+@import "../../scss/sizes.scss";
 
 .landing-layout {
-    max-width: 1160px;
-    margin: 0 auto;
+  max-width: 1160px;
+  margin: 0 auto;
 
-    &__room-config {
-        position: absolute;
-        top: 140px;
-        left: calc(50% - 380px / 2);
-        z-index: 1;
-    }
+  &__room-config {
+    position: absolute;
+    top: 140px;
+    left: calc(50% - 380px / 2);
+    z-index: 1;
+  }
 }
 
 @media screen and (min-width: $small-size) {
-    .landing-layout {
-
-        &__room-config {
-            left: auto;
-        }
+  .landing-layout {
+    &__room-config {
+      left: auto;
     }
+  }
 }
