--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,71 +1,74 @@
-@import 'colors.scss';
-@import 'fonts.scss';
-
+@import "colors.scss";
+@import "fonts.scss";
 
 :root {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    color: rgba(31, 32, 65, 0.75);
-    font-family: 'Montserrat', Arial;
-    margin-top: 3em;
-    font-size: .875rem;
-    line-height: 20px;
-    padding: 0;
-    margin: 0;
-    height: 100%;
+  color: rgba(31, 32, 65, 0.75);
+  font-family: "Montserrat", Arial, sans-serif;
+  margin-top: 3em;
+  font-size: 0.875rem;
+  line-height: 20px;
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    color: $dark-shade-100;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  color: $dark-shade-100;
 }
 
 h1 {
-    font-family: 'Quicksand Bold', sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.25em;
-    color: #1F2041;
+  font-family: "Quicksand Bold", Arial, sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.25em;
+  color: #1f2041;
 }
 
 h2 {
-    font-family: 'Quicksand Bold', sans-serif;
-    font-size: 1.1875rem;
-    line-height: 1.22em;
-    color: #1F2041;
+  font-family: "Quicksand Bold", Arial, sans-serif;
+  font-size: 1.1875rem;
+  line-height: 1.22em;
+  color: #1f2041;
 }
 
 h3 {
-    font-family: 'Montserrat Bold';
-    font-size: .75rem;
-    line-height: 1.1em;
-    color: $dark-shade-100;
-    text-transform: uppercase;
+  font-family: "Montserrat Bold", Arial, sans-serif;
+  font-size: 0.75rem;
+  line-height: 1.1em;
+  color: $dark-shade-100;
+  text-transform: uppercase;
 }
 
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px; 
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
 }
 
 a {
-    text-decoration: none;
-    color: $dark-shade-50;
+  text-decoration: none;
+  color: $dark-shade-50;
 }
